# stt-uz

./: .env.example  .gitignore  README.md  modal_app.py  pyproject.toml
app/: __init__.py  config.py  main.py  services.py
app/audio/: __init__.py  normalize.py  write.py
app/bot/: handlers.py
app/storage/: db.py  results.py
app/stt/: __init__.py  base.py  manager.py  registry.py
app/stt/adapters/: __init__.py  faster_whisper.py  hf_whisper.py  wav2vec2_ctc.py
app/tts/: __init__.py  base.py  manager.py  registry.py
app/tts/adapters/: __init__.py  modal_tts.py  omnivoice.py
scripts/: convert_whisper_to_ct2.py
uzbek_stt_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
